[package]
name = "ennui"
version = "0.1.0"
authors = ["Peter Engelbert <pmengelbert@gmail.com>"]
edition = "2018"
default-run = "ennui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "*", features = ["v4", "stdweb"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
serde_cbor = "0.11.1"
rand = "0.7.3"
