[package]
name = "ennui"
version = "0.1.0"
authors = ["Peter Engelbert <pmengelbert@gmail.com>"]
edition = "2018"
default-run = "ennui"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
serde_cbor = "0.11.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.7.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
lazy_static = "1.4.0"
mut_static = "5.0.0"
wasm-bindgen = "0.2.69"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
