[package]
name = "convert"
version = "0.1.0"
authors = ["Peter Engelbert <pmengelbert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ennui = { path = "../", default-features = false, features = ["map", "maponly"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
serde_cbor = "0.11.1"
