[package]
name = "ennui-wasm"
version = "0.1.0"
authors = ["Peter Engelbert <pmengelbert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ennui = { path = "../" }
lazy_static = "1.4.0"
mut_static = "5.0.0"
wasm-bindgen = "0.2.69"
